Updated pyproject.toml to include only essential files in the sdist build

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,6 +92,17 @@ path = "src/pyventus/__init__.py"
 # | Building Target                                                |
 # ------------------------------------------------------------------
 
+[tool.hatch.build.targets.sdist]
+include = [
+    "/src",
+    "/tests",
+    "/.gitignore",
+    "/pyproject.toml",
+    "/CITATION.cff",
+    "/README.md",
+    "/LICENSE",
+]
+
 [tool.hatch.build.targets.wheel]
 packages = ["src/pyventus"]
 
