--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,7 @@ site_name: Pyventus
 site_url: https://mdapena.github.io/pyventus/
 site_author: Manuel Da Pena
 site_description: >-
-  A modern and robust Python package for event-driven programming. Define, emit, and 
-  orchestrate events with ease using customizable event emitters and flexible responses.
+  A powerful Python package for event-driven programming; define, emit, and orchestrate events with ease.
 
 # Repository
 repo_name: mdapena/pyventus
