--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,6 +91,8 @@ plugins:
             show_symbol_type_toc: true
             show_signature_annotations: true
             show_category_heading: true
+  - social:
+      enabled: !ENV [ CI, false ]
 
 # Extensions
 markdown_extensions:
