--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ build-backend = "hatchling.build"
 [project]
 name = "pyventus"
 dynamic = ["version"]
-description = "A modern and robust Python package for event-driven programming. Define, emit, and orchestrate events with ease using customizable event emitters and flexible responses."
+description = "A powerful Python package for event-driven programming; define, emit, and orchestrate events with ease."
 requires-python = ">=3.10"
 readme = "README.md"
 license = "MIT"
@@ -63,10 +63,11 @@ all = [
 # ----------
 
 docs = [
-    "mkdocs-material>=9.4.0",
+    "mkdocs-material>=9.5.17",
     "mkdocstrings[python]>=0.24.0",
     "mkdocs-git-revision-date-localized-plugin>=1.2.1",
-    "mkdocs-git-authors-plugin>=0.7.2",
+    "mkdocs-git-committers-plugin-2>=2.3.0",
+    "mkdocs-material[imaging]",
 ]
 
 # --------------------
