Adopt Ruff format and linting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,11 +77,10 @@ docs = [
 tests = [
     "pyventus[all]",
     "mypy>=1.7.1",
-    "black>=23.12.0",
-    "isort>=5.13.2",
+    "ruff>=0.6.1",
     "pytest>=7.4.0",
-    "coverage[toml]>=7.3.3",
     "pytest-asyncio>=0.21.0",
+    "coverage[toml]>=7.3.3",
     "fakeredis>=2.20.0",
     "httpx>=0.23.0",
 ]
@@ -145,8 +144,7 @@ dependencies = ["pyventus[tests]"]
 
 [tool.hatch.envs.tests.scripts]
 test = "pytest -v {args:tests}"
-style = "black --check --diff {args:.}"
-imports = "isort --check --diff {args:.}"
+linting = "ruff check --diff {args:.}"
 typing = "mypy"
 cov = [
     "coverage run -m pytest -v {args:tests}",
@@ -155,8 +153,7 @@ cov = [
     "coverage xml",
 ]
 all = [
-    "style",
-    "imports",
+    "linting",
     "typing",
     "cov",
 ]
@@ -200,17 +197,34 @@ exclude_lines = [
 ]
 
 # ------------------------------------------------------------------
-# | Formatting                                                     |
+# | Linting                                                        |
 # ------------------------------------------------------------------
 
-[tool.black]
+[tool.ruff]
 line-length = 120
-target-version = ["py310"]
+target-version = "py310"
 
-# ------------------------------------------------------------------
-# | Imports Sorting                                                |
-# ------------------------------------------------------------------
+[tool.ruff.format]
+quote-style = "double"  # Like Black, use double quotes for strings.
 
-[tool.isort]
-profile = "black"
-src_paths = ["src/pyventus", "tests"]
+[tool.ruff.lint]
+select = [
+    "F",        # Pyflakes
+    "E",        # pycodestyle (Error)
+    "I",        # isort
+    "N",        # pep8-naming
+    "D",        # pydocstyle
+    "UP",       # pyupgrade
+    "YTT",      # flake8-2020
+    "B",        # flake8-bugbear
+    "C4",       # flake8-comprehensions
+    "T10",      # flake8-debugger
+    "T20",      # flake8-print
+    "PYI006",   # flake8-pyi
+]
+ignore = ["E501"]
+pydocstyle = { convention = "google" }
+isort = { known-first-party = ["pyventus", "tests"] }
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401"]
