--- a/pyproject.toml
+++ b/pyproject.toml
@@ -143,7 +143,7 @@ dependencies = ["pyventus[tests]"]
 
 [tool.hatch.envs.tests.scripts]
 test = "pytest -v {args:tests}"
-linting = "ruff check {args:.} & ruff format --check {args:.}"
+style = "ruff check {args:.} & ruff format --check {args:.}"
 typing = "mypy"
 cov = [
     "coverage run -m pytest -v {args:tests}",
@@ -153,7 +153,7 @@ cov = [
 ]
 
 all = [
-    "linting",
+    "style",
     "typing",
     "cov",
 ]
