--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,6 +96,7 @@ tests = [
     "coverage[toml]>=7.6.1",
     "fakeredis>=2.25.0",
     "httpx>=0.23.0",
+    "tqdm>=4.66.5",
 ]
 
 # =================================
