--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -120,6 +120,11 @@ markdown_extensions:
   - toc:
       permalink: true
 
+# Extra JavaScript for MathJax
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+
 # Page tree
 nav:
   - Pyventus: index.md
