--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -3,10 +3,11 @@ name: Docs
 on:
   push:
     branches:
-      - docs-update
+      - master
   release:
     types:
       - created
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -34,9 +35,16 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install .[docs]
+      - name: Install dependencies
+        run: pip install .[docs]
+      - name: Deploy dev documentation
+        if: github.ref == 'refs/heads/master'
+        run: mike deploy --push dev
       - name: Get Pyventus Docs Version
+        if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
         run: |
           pyventus_docs_version=$(python -c "import pyventus; print('.'.join(map(str, pyventus.__version__.split('.')[:2])))")
           echo "PYVENTUS_DOCS_VERSION=$pyventus_docs_version" >> $GITHUB_ENV
-      - run: mike deploy --push --update-aliases $PYVENTUS_DOCS_VERSION latest
+      - name: Deploy release documentation
+        if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
+        run: mike deploy --push --update-aliases $PYVENTUS_DOCS_VERSION latest
