--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -131,7 +131,7 @@ markdown_extensions:
 
 # Extra JavaScript for MathJax
 extra_javascript:
-  - javascripts/mathjax.js
+  - .javascripts/mathjax.js
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 
 # Page tree
