Add announcement bar for Pyventus v0.7.0 release

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,6 +49,7 @@ theme:
     - content.code.copy
     - content.tooltips
     - content.code.annotate
+    - announce.dismiss
 
 # Customization
 extra:
