Update API section for v0.7.0 docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,7 +39,7 @@ theme:
     - navigation.tabs
     - navigation.indexes
     - navigation.top
-    - navigation.expand
+    - navigation.sections
     - navigation.footer
     - toc.follow
     - search.suggest
@@ -94,7 +94,7 @@ plugins:
       type: timeago
       enable_creation_date: true
       exclude:
-        - api/index.md
+        - api/*
         - tutorials/index.md
         - index.md
   - mkdocstrings:
@@ -107,7 +107,7 @@ plugins:
             members_order: source
             separate_signature: true
             unwrap_annotated: true
-            filters: [ "!^(_.*$)", "!^EventEmission$", "^(__init__|__init_subclass__|__call__|__enter__|__exit__)$" ]
+            filters: ["!^(_.*$)", "^(__init__|__init_subclass__|__call__|__enter__|__exit__)$"]
             docstring_section_style: spacy
             signature_crossrefs: true
             show_symbol_type_heading: true
@@ -159,5 +159,39 @@ nav:
       - tutorials/index.md
   - API Reference:
       - api/index.md
+      - Core:
+        - api/core/index.md
+        - Collections:
+          - MultiBidict: api/core/collections/multi_bidict.md
+        - Exceptions:
+          - PyventusException: api/core/exceptions/pyventus_exception.md
+          - PyventusImportException: api/core/exceptions/pyventus_import_exception.md
+        - Processing:
+          - ProcessingService: api/core/processing/processing_service.md
+          - AsyncIOProcessingService: api/core/processing/asyncio_processing_service.md
+          - CeleryProcessingService: api/core/processing/celery_processing_service.md
+          - ExecutorProcessingService: api/core/processing/executor_processing_service.md
+          - FastAPIProcessingService: api/core/processing/fastapi_processing_service.md
+          - RedisProcessingService: api/core/processing/redis_processing_service.md
+        - Subscriptions:
+          - SubscriptionContext: api/core/subscriptions/subscription_context.md
+          - Subscription: api/core/subscriptions/subscription.md
+          - Unsubscribable: api/core/subscriptions/unsubscribable.md
+      - Events:
+        - api/events/index.md
+        - "EventEmitter":
+          - api/events/emitters/index.md
+          - EventEmitter Utils: api/events/emitters/event_emitter_utils.md
+        - EventHandler: api/events/handlers/event_handler.md
+        - EventLinker: api/events/linkers/event_linker.md
+        - EventSubscriber: api/events/subscribers/event_subscriber.md
+      - Reactive:
+        - api/reactive/index.md
+        - Observable:
+          - api/reactive/observables/index.md
+          - ObservableTask: api/reactive/observables/observable_task.md
+          - Observable Utils: api/reactive/observables/observable_utils.md
+        - Observer: api/reactive/observers/observer.md
+        - Subscriber: api/reactive/subscribers/subscriber.md
   - Contributing: contributing.md
   - Release Notes: release-notes.md
