Enable git-committers only in CI

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,6 +91,7 @@ extra:
 plugins:
   - search
   - git-committers:
+      enabled: !ENV [ CI, false ]
       repository: mdapena/pyventus
       branch: master
       exclude:
