Add legacy tutorials for reference during rebuild

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -99,14 +99,14 @@ plugins:
       branch: master
       exclude:
         - api/*
-        - tutorials/index.md
+        - learn/index.md
         - index.md
   - git-revision-date-localized:
       type: timeago
       enable_creation_date: true
       exclude:
         - api/*
-        - tutorials/index.md
+        - learn/index.md
         - index.md
   - mkdocstrings:
       handlers:
@@ -172,6 +172,16 @@ nav:
   - Learn:
       - learn/index.md
       - Upgrade Guide: learn/upgrade_guide.md
+      - Events:
+        - Exploring Event Types: learn/events/event.md
+        - The EventLinker Registry: learn/events/event-linker.md
+        - Master the Event Emitter:
+            - learn/events/emitters/index.md
+            - AsyncIO Event Emitter: learn/events/emitters/asyncio/index.md
+            - Celery Event Emitter: learn/events/emitters/celery/index.md
+            - Executor Event Emitter: learn/events/emitters/executor/index.md
+            - FastAPI Event Emitter: learn/events/emitters/fastapi/index.md
+            - RQ Event Emitter: learn/events/emitters/rq/index.md
   - API Reference:
       - api/index.md
       - Core:
