--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -173,6 +173,7 @@ nav:
       - learn/index.md
       - Upgrade Guide: learn/upgrade_guide.md
       - Events:
+        - learn/events/index.md
         - Exploring Event Types: learn/events/event.md
         - The EventLinker Registry: learn/events/event-linker.md
         - Master the Event Emitter:
